# PlamoIndex

./: .gitignore  README.md  plamoindex.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-06/06-06-bandai-source-collection/: check.jsonl  implement.jsonl  info.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-06-bandai-source-collection/research/: bandai-manual-schedule-collection.md  kotobukiya-manual-product-collection.md
.trellis/tasks/archive/2026-06/06-06-implement-plamoindex-v0-1/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/qwjhb/: index.md  journal-1.md
curated/: aliases.yaml
curated/products/: README.md
curated/vendors/: wave.yaml
src/plamoindex/: __init__.py  __main__.py  cli.py  collector.py  config.py  dataset.py  fetch.py  merge.py
src/plamoindex/curated/: loader.py  validator.py
src/plamoindex/models/: __init__.py  manual.py  product.py  relationship.py  shared.py
src/plamoindex/output/: checksums.py  writer.py
src/plamoindex/sources/: __init__.py  bandai.py  bandai_manual.py  bandai_schedule.py  base.py  kotobukiya.py  kotobukiya_collector.py  registry.py
tests/: test_collector.py  test_curated.py  test_dataset.py  test_fetch.py  test_merge.py  test_schema.py
